--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   </head>
   <body>
     <h1>Assignment list:</h1>
-    
+    <a href='/14.12.19/LR_9'></a>
+    <a href='/14.12.19/LR_10'></a>
+    <a href='/14.12.19/LR_11'></a>
+    <a href=''></a>
   </body>
 </html>
