--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <a href='/14.12.19/LR_9'>LR_9</a>
     <a href='/14.12.19/LR_10'>LR_10</a>
     <a href='/14.12.19/LR_11'>LR_12</a>
-    <a href=''></a>
+    <a href='/14.12.19/LR8/lr8'>LR_8</a>
   </body>
 </html>
