--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <a href='/14.12.19/LR_10'>LR_10</a>
     <a href='/14.12.19/LR_11'>LR_12</a>
     <a href='/14.12.19/LR8/lr8'>LR_8</a>
+    <a href='/23.12.19/LR_13'>LR_13</a>
+    <a href='/23.12.19/LR_17'>LR_17</a>
+    <a href='/23.12.19/LR_19'>LR_19</a>
   </body>
 </html>
